--- a/build.config
+++ b/build.config
@@ -24,10 +24,10 @@ CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
 ### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
-CONFIG_FIRMWARE_INCLUDE_XFRM=y
+#CONFIG_FIRMWARE_INCLUDE_XFRM=y
 
 ### Include network QoS scheduling modules. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_QOS=y
+#CONFIG_FIRMWARE_INCLUDE_QOS=y
 
 ### Include IMQ module for shapers (a bit of performance degradation). ~0.02MB
 #CONFIG_FIRMWARE_INCLUDE_IMQ=y
@@ -36,13 +36,13 @@ CONFIG_FIRMWARE_INCLUDE_QOS=y
 #CONFIG_FIRMWARE_INCLUDE_IFB=y
 
 ### Include IPSet utility and kernel modules. ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_IPSET=y
+#CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include NFSv3 client. ~0.5MB
 #CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_CIFS=y
+#CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ### Include Shortcut Forward Engine
 CONFIG_FIRMWARE_INCLUDE_SHORTCUT_FE=y
@@ -157,10 +157,10 @@ CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 #CONFIG_FIRMWARE_INCLUDE_EOIP=y
 
 ### Include Curl support ~0.15MB
-CONFIG_FIRMWARE_INCLUDE_CURL=y
+#CONFIG_FIRMWARE_INCLUDE_CURL=y
 
 ### Include KMS Activation support ~0.06MB
 #CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 
 ### Include iPerf3 support ~0.13MB
-CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+#CONFIG_FIRMWARE_INCLUDE_IPERF3=y
