--- a/build.config
+++ b/build.config
@@ -18,7 +18,7 @@ CONFIG_FIRMWARE_CPU_600MHZ=y
 ### Kernel driver select for WiFi AP 2.4GHz
 ### 2.7 = MT7620 v2.7.2.0
 ### 3.0 = MT7620 v3.0.4.0
-CONFIG_FIRMWARE_WIFI2_DRIVER=2.7
+CONFIG_FIRMWARE_WIFI2_DRIVER=4.1
 
 ### Enable IPv6 support
 CONFIG_FIRMWARE_ENABLE_IPV6=y
@@ -91,7 +91,7 @@ CONFIG_FIRMWARE_INCLUDE_DDNS_SSL=y
 CONFIG_FIRMWARE_INCLUDE_HTTPS=y
 
 ### Include sftp-server. openssl ~1.2MB, sftp-server ~0.06MB
-CONFIG_FIRMWARE_INCLUDE_SFTP=y
+#CONFIG_FIRMWARE_INCLUDE_SFTP=y
 
 ### Include dropbear SSH. ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_DROPBEAR=y
@@ -118,7 +118,7 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
-CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+#CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include TOR proxy ~2.8MB
 #CONFIG_FIRMWARE_INCLUDE_TOR=y
