--- a/build.config
+++ b/build.config
@@ -24,10 +24,10 @@ CONFIG_FIRMWARE_WIFI2_DRIVER=4.1
 CONFIG_FIRMWARE_ENABLE_IPV6=y
 
 ### Include XFRM (IPsec) modules & iptables extension ~ 0.2MB
-#CONFIG_FIRMWARE_INCLUDE_XFRM=y
+CONFIG_FIRMWARE_INCLUDE_XFRM=y
 
 ### Include network QoS scheduling modules. ~0.2MB
-#CONFIG_FIRMWARE_INCLUDE_QOS=y
+CONFIG_FIRMWARE_INCLUDE_QOS=y
 
 ### Include IMQ module for shapers (a bit of performance degradation). ~0.02MB
 #CONFIG_FIRMWARE_INCLUDE_IMQ=y
@@ -36,7 +36,7 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 #CONFIG_FIRMWARE_INCLUDE_IFB=y
 
 ### Include IPSet utility and kernel modules. ~0.4MB
-#CONFIG_FIRMWARE_INCLUDE_IPSET=y
+CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include NFSv3 client. ~0.5MB
 #CONFIG_FIRMWARE_INCLUDE_NFSC=y
