--- a/build.config
+++ b/build.config
@@ -118,7 +118,7 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
 CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
+CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include TOR proxy ~2.8MB
 #CONFIG_FIRMWARE_INCLUDE_TOR=y
@@ -157,10 +157,10 @@ CONFIG_FIRMWARE_INCLUDE_ZRAM=y
 #CONFIG_FIRMWARE_INCLUDE_EOIP=y
 
 ### Include Curl support ~0.15MB
-#CONFIG_FIRMWARE_INCLUDE_CURL=y
+CONFIG_FIRMWARE_INCLUDE_CURL=y
 
 ### Include KMS Activation support ~0.06MB
 #CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
 
 ### Include iPerf3 support ~0.13MB
-#CONFIG_FIRMWARE_INCLUDE_IPERF3=y
+CONFIG_FIRMWARE_INCLUDE_IPERF3=y
